--- a/manifest_aarch64.yml
+++ b/manifest_aarch64.yml
@@ -1,7 +1,7 @@
-image: duffbeer2000/dockertravis:aarch64
+image: duffbeer2000/dockertravis:$FULLVERSION
 manifests:
   -
-    image: duffbeer2000/dockertravis:$VERSION-aarch64
+    image: duffbeer2000/dockertravis:$VERSION
     platform:
       architecture: arm64
       os: linux
