--- a/manifest_amd64.yml
+++ b/manifest_amd64.yml
@@ -1,7 +1,7 @@
-image: duffbeer2000/dockertravis:amd64
+image: duffbeer2000/dockertravis:$FULLVERSION
 manifests:
   -
-    image: duffbeer2000/dockertravis:$VERSION-amd64
+    image: duffbeer2000/dockertravis:$VERSION
     platform:
       architecture: amd64
       os: linux
